Fix module.ini path for check-weather

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -716,7 +716,7 @@ label = " %mb_used%"
 
 [module/weather]
 type = custom/script
-exec = /home/kostask/.config/polybar/scripts/check-weather
+exec = ~/.config/polybar/scripts/check-weather
 interval = 3600
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
